fix(lan): Own embedded JmDNS lifecycle resources (#410)
Qualification-only source publication. Relocate the verified upstream source with explicit provenance, serialize lifecycle disposal, and verify the real-resource close boundary. Keep Android/JVM embedding and supply-chain inspection aligned.

Independent scoped source reviews and final qualification-publication GO retained. Focused consumer/SBOM and repository controls passed with successful isolated stop and no owned survivors. Earlier Linux R2 aggregate failure is preserved. Supported Mac locks/consumers, actual ART, OSV and final #410 approval remain pending.